Use getFirst where applicable (for IntelliJ)